# obsidian-librarian

./: Architecture Design Document.md  CrewAI Kickoff Prompt.md  LICENSE  README.md  Requirements Document.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
crewai/: agents.yaml  kickoff_inputs.yaml  tasks.yaml
data/: rules_registry.yaml
librarian/: cli.py  config.py  organizer.py  pending.py  pipeline.py  safety.py
librarian/agents/: actions.py  crew.py  tools.py
librarian/ingest/: chunker.py  embedder.py  watcher.py
librarian/rag/: graph.py  store.py
librarian/rules/: engine.py  loader.py
tests/: conftest.py  test_chunker.py  test_graph.py  test_graph_pragmas.py  test_link_safety.py  test_organizer.py  test_pending.py  test_rules_registry.py  test_safety.py  test_write_tools.py
