[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-librarian"
version = "0.1.0"
description = "Locally-running AI vault organizer and RAG backend for Obsidian"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.80.0",
    "chromadb>=0.5.0",
    "openai>=1.50.0",
    "watchdog>=4.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "ruamel.yaml>=0.18.0",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-frontmatter>=1.1.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
librarian = "librarian.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["librarian"]
